Fix showing QR code on iOS

--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -345,6 +345,8 @@ table {
 		display: flex;
 		padding: 10px;
 		background-color: #fff;
+		margin: 0 20px;
+ 		border-radius: var(--border-radius-large);
 		.qrcode {
 			min-width: 200px;
 			max-width: 100%;
